# ebpf-val

./: .gitignore  LICENSE  README.md  cabal.project  ebpf-cfg.cabal  launch.json  output.txt  output_1.txt  tags
app/: Main.hs
examples/: add.asm  div.asm  mem_add.asm  mul.asm  sub.asm  sum_five.asm
report/: main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.tex  main.toc  refs.bib
report/sections/: conclusion.tex  future_work.tex  implementation.tex  introduction.tex  validation.tex
src/: Definitions.hs  Ebpf_cfg.hs  Interpreter.hs  Workset.hs
src/Ebpf/: cfg.hs
test/: BoundSpec.hs  InterpreterSpec.hs  Spec.hs  WorksetSpec.hs
