cabal-version: 3.4
tested-with: ghc ==9.6.7
name: ebpf-cfg
version: 0.1.0.0
synopsis: Starter code for working with a CFG for eBPF.
homepage: https://github.com/kfl/ebpf-cfg
license: MIT
license-file: LICENSE
author: Simon Vinding Brodresen
maintainer: rzn875@alumni.ku.dk
build-type: Simple

common warnings
  ghc-options: -Wall

executable ebpf-val
  import: warnings
  main-is: Main.hs
  other-modules:
    Definitions
    Ebpf_cfg

  build-depends:
    base >=4.14 && <5,
    containers,
    ebpf-tools ==0.2.0.0,
    text-display,

  hs-source-dirs:
    app
    src

  default-language: Haskell2010
