cabal-version: 3.4
tested-with: ghc ==9.6.7
name: ebpf-val
version: 0.1.0.0
synopsis: Ebpf value analysis.
homepage: https://github.com/svbrodersen/ebpf-val
license: MIT
license-file: LICENSE
author: Simon Vinding Brodresen
maintainer: rzn875@alumni.ku.dk
build-type: Simple

common warnings
  ghc-options: -Wall

executable ebpf-val
  import: warnings
  main-is: Main.hs
  other-modules:
    Definitions
    Ebpf_cfg
    Interpreter

  build-depends:
    base >=4.14 && <5,
    containers,
    ebpf-tools ==0.2.0.0,
    text-display,

  hs-source-dirs:
    app
    src

  default-language: Haskell2010
