cabal-version: 3.4
tested-with: ghc ==9.6.7
name: ebpf-val
version: 0.1.0.0
synopsis: Ebpf value analysis.
homepage: https://github.com/svbrodersen/ebpf-val
license: MIT
license-file: LICENSE
author: Simon Vinding Brodresen
maintainer: rzn875@alumni.ku.dk
build-type: Simple

common warnings
  ghc-options: -Wall

library
  import: warnings
  exposed-modules:
    Definitions
    Ebpf_cfg
    Interpreter
  build-depends:
    array,
    base >=4.14 && <5,
    containers,
    ebpf-tools ==0.2.0.0,
    text-display
  hs-source-dirs: src
  default-language: Haskell2010

executable ebpf-val
  import: warnings
  main-is: Main.hs
  build-depends:
    base >=4.14 && <5,
    ebpf-val
  hs-source-dirs: app
  default-language: Haskell2010

test-suite ebpf-val-test
  import: warnings
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules:
    BoundSpec
    InterpreterSpec
  build-depends:
    base >=4.14 && <5,
    hspec,
    ebpf-val,
    array,
    containers,
    ebpf-tools ==0.2.0.0
